# sajou

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  SAJOU-MANIFESTO.md  SCENE-BUILDER-SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
adapters/mcp-server/: package.json  tsconfig.json
adapters/tap/: package.json  tsconfig.json
dev/: index.html  main.ts
docs/: index.md  sajou-mcp-server-design.md
docs/.vitepress/: config.mts
docs/active/: openclaw-token-autofill.md  p5-threejs-mode.md  persist-remote-sources.md  shader-editor-spec.md  shader-theme-engine.md  signal-bidirectionnel.md  tap-local-agent-connect.md
docs/adr/: 001-signal-protocol.md  002-choreographer-runtime.md  002-entity-format.md  003-renderer-stack.md
docs/archive/: SCENE-BUILDER-PHASE2-SPEC.md  SCENE-BUILDER-SPEC-v1.md
docs/backlog/: api-key-storage-security.md  auto-connect-claude-code.md  beforeunload-flush-reliability.md  choreographer-rack-model.md  client-offline-resilience.md  duplicate-scene-object.md  entity-speech-bubbles.md  keyboard-shortcuts-panel.md  multi-agent-source-splitting.md  multi-shader-compositor.md  periodic-local-rescan.md  (+23 more)
scripts/: release-public.sh
tools/scene-builder/src-tauri/: Cargo.toml  tauri.conf.json
tools/scene-builder/src-tauri/capabilities/: default.json
tools/scene-builder/src-tauri/icons/: icon.icns
tools/scene-builder/src-tauri/src/: lib.rs  main.rs
(+325 files in other folders)
