[package]
name = "sajou"
version = "0.4.0"
description = "sajou — A visual choreographer for AI agents"
authors = ["Yan"]
edition = "2021"

[lib]
name = "sajou_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
